k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pictures-api
  labels:
    app: pictures-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pictures-api
  template:
    metadata:
      labels:
        app: pictures-api
    spec:
      containers:
        - name: pictures-api
          image: ickee953/pictures-api:1.0.0
          ports:
            - containerPort: 8080
